<resources>
    <string name="app_name">Construction Line Project</string>
    <string name="construction_cart">Construction Cart</string>
    <string name="buy_materials">Buy Materials</string>
    <string name="book_meeting_with_designer">Book Meeting with Designer</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="select_date">Select Date</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="select_date1">Select Date</string>
    <string name="book_meeting">Book Meeting</string>
    <string name="buy_land">Buy Land</string>
    <string name="book_interior_designer">Book Interior Designer</string>
    <string name="buy_materials1">Buy Materials</string>
    <string name="sell_flats">Sell Flats</string>
    <string name="view_cart_order">View Cart Order</string>
    <string name="checkout_order">Checkout order</string>
    <string name="checkout_order1">Checkout Order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="choose_wich_one_you_want">Choose Wich One you Want</string>
    <string name="order_summary">Order Summary</string>
    <string name="confirm_order1">Confirm Order</string>
    <string name="material_name">Material Name</string>
    <string name="material_price">Material Price</string>
    <string name="buy">Buy</string>
    <string name="address">Address</string>
    <string name="price_rs">Price: Rs.</string>
    <string name="sell_flat">Sell Flat</string>
    <string name="flat_name">Flat Name</string>
    <string name="sell_flats1">Sell Flats</string>
    <string name="view_meeting">View Meeting</string>
    <string name="total_price_rs_0">Total Price: Rs. 0</string>
    <string name="buy_land1">Buy Land</string>
    <string name="choose_which_one_you_want">Choose Which One You Want</string>
    <string name="buy_land2">Buy Land</string>
    <string name="view_cart_order1">View Cart Order</string>
    <string name="sell_flats2">Sell Flats</string>
    <string name="checkout_order2">Checkout Order</string>
    <string name="book_interior_designer2">Book Interior Designer</string>
    <string name="buy_materials2">Buy Materials</string>
    <string name="proceed_to_buy">Proceed to buy</string>
</resources>