<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivFlatImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvFlatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flat_name"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvFlatAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <TextView
        android:id="@+id/tvFlatPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_rs" />

    <Button
        android:id="@+id/btnSellFlat"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/sell_flat"/>
</LinearLayout>
