<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/imgMaterial"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/txtMaterialName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/txtMaterialPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_price"
        android:textSize="16sp"
        android:paddingTop="4dp" />

    <Button
        android:id="@+id/btnBuyMaterial"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/buy"
        android:layout_marginTop="8dp"/>
</LinearLayout>
